--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "rmwc": "^6.1.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.0",
+    "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "babel-eslint": "^10.1.0",
